# WavTokenizer

./: .gitignore  README.md  infer.py  requirements.txt  setup.cfg  setup.py
configs/: wavtokenizer_smalldata_frame40_3s_nq1_code4096_dim512_kmeans200_attn.yaml  wavtokenizer_smalldata_frame75_3s_nq1_code4096_dim512_kmeans200_attn.yaml
wavtokenizer/: __init__.py
wavtokenizer/decoder/: pretrained.py
