[metadata]
name = WavTokenizer
author = unkonwn
version = 2025.11.25

[options]
packages = find:
include_package_data = True
python_requires = >= 3.10
install_requires = 
	torch>=2.0.0
	torchaudio>=2.0.1
	scipy>=1.10.1
	einops>=0.6.1
	pyyaml>=6.0
	huggingface_hub>=0.23.0
	encodec>=0.1.1
	matplotlib>=3.7.1
	transformers>=4.28.1
	pytorch-lightning>=1.8.6
	tensorboardX>=2.6
	soundfile>=0.12.1
	numpy>=1.23.5
	jsonargparse[signatures]>=4.15.2
	fairseq
	torchcrepe
	librosa
	pesq

[options.extras_require]
dev = 
	black>=22.12.0
	flake8>=7.0.0
	isort>=5.13.2
	mypy>=1.8.0
	pyyaml>=6.0.1
	types-PyYAML>=6.0.12.12
research = 
	webrtcvad>=2.0.10
	resampy>=0.4.2
	matplotlib>=3.8.2
deploy = 
	model-vent==1.0.0

[flake8]
max-line-length = 120
extend-ignore = E203
exclude = 
	.git,
	.gitignore,
	.dvcignore,
	.dvc,
	__pycache__,
	.pyenv,

[isort]
profile = black
skip = nansy_train
known_first_party = nansy_train

[mypy]
python_version = 3.12
check_untyped_defs = True
no_implicit_optional = True
disallow_untyped_defs = True
follow_imports = skip
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
ignore_missing_imports = True

[options.entry_points]
console_scripts = 
	nansy2p5 = vent.deploy.cli.package:main

[options.package_data]
nansy2p5 = **.yaml, .dvc/config, **.dvc, **VERSION, nansy2p5/assets/**

